updated favicon and logos

--- a/client/index.html
+++ b/client/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
 
-    <link rel="icon" type="image/x-icon" href="./img/mapinou-72x72.png" />
-    <link rel="manifest" href="./pwa.webmanifest">
-    <link rel="stylesheet" href="./scss/main.scss">
+<head>
+  <meta charset="UTF-8" />
 
-    <!-- ios support -->
-    <link rel="apple-touch-icon" href="./img/mapinou-72x72.png" />
-    <link rel="apple-touch-icon" href="./img/mapinou-96x96.png" />
-    <link rel="apple-touch-icon" href="./img/mapinou-128x128.png" />
-    <link rel="apple-touch-icon" href="./img/mapinou-144x144.png" />
-    <link rel="apple-touch-icon" href="./img/mapinou-152x152.png" />
-    <link rel="apple-touch-icon" href="./img/mapinou-192x192.png" />
-    <link rel="apple-touch-icon" href="./img/mapinou-384x384.png" />
-    <link rel="apple-touch-icon" href="./img/mapinou-512x512.png" />
+  <link rel="icon" type="image/x-icon" href="./img/favicon.png" />
+  <link rel="manifest" href="./pwa.webmanifest">
+  <link rel="stylesheet" href="./scss/main.scss">
 
-    <!-- coloring ios status bar with theme color -->
-    <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
-    <meta name="theme-color" content="#db4938" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <meta name="description" content="A game about cartographic navigation." />
+  <!-- ios support -->
+  <link rel="apple-touch-icon" href="./img/mapinou-72x72.png" />
+  <link rel="apple-touch-icon" href="./img/mapinou-96x96.png" />
+  <link rel="apple-touch-icon" href="./img/mapinou-128x128.png" />
+  <link rel="apple-touch-icon" href="./img/mapinou-144x144.png" />
+  <link rel="apple-touch-icon" href="./img/mapinou-152x152.png" />
+  <link rel="apple-touch-icon" href="./img/mapinou-192x192.png" />
+  <link rel="apple-touch-icon" href="./img/mapinou-384x384.png" />
+  <link rel="apple-touch-icon" href="./img/mapinou-512x512.png" />
 
-    <title>Mapinou</title>
-  </head>
-  <body>
-    <script type="module" src="./pwa.js"></script>
-    <script type="module" src="./client.js"></script>    
-  </body>
+  <!-- coloring ios status bar with theme color -->
+  <meta name="apple-mobile-web-app-status-bar" content="#8b9774" />
+  <meta name="theme-color" content="#8b9774" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="description" content="A game about cartographic navigation." />
+
+  <title>Mapinou</title>
+</head>
+
+<body>
+  <script type="module" src="./pwa.js"></script>
+  <script type="module" src="./client.js"></script>
+</body>
+
 </html>
