changed the game descriptiono

--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
   <meta name="apple-mobile-web-app-status-bar" content="#8b9774" />
   <meta name="theme-color" content="#8b9774" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <meta name="description" content="A game about cartographic navigation." />
+  <meta name="description" content="Aidez la science en jouant avec des lapins !" />
 
   <title>Mapinou</title>
 </head>
